--- a/index.html
+++ b/index.html
@@ -15,11 +15,9 @@
     </style>
     <!-- load angular via CDN -->
     <script src="//code.angularjs.org/1.3.0-rc.1/angular.min.js"></script>
-    <script src="//code.angularjs.org/1.3.0-rc.1/angular-messages.js"></script>
-    <script src="//code.angularjs.org/1.3.0-rc.1/angular-resource.min.js"></script>
     <script src="//code.angularjs.org/1.3.0-rc.1/angular-mocks.js"></script>
+    <script src="//code.angularjs.org/1.3.0-rc.1/angular-route.min.js"></script>
     <script src="app.js"></script>
-    <script src="backend.js"></script>
 </head>
 
 <body>
@@ -31,34 +29,13 @@
                 </div>
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="#"><i class="fa fa-home"></i> Home</a></li>
+                    <li><a href="#/second"><i class="fa fa-home"></i> Second</a></li>
                 </ul>
             </div>
         </nav>
     </header>
     <div class="container">
-        <div ng-controller="mainController">
-            <div>
-                <label>What is your twitter handle?</label>
-                <input type="text" ng-model="handle" />
-            </div>
-            <div class="alert" ng-class="{ 'alert-warning': handle.length < characters, 'alert-danger': handle.length > characters}" ng-if="handle.length !== characters">
-                <div ng-show="handle.length < characters">
-                    You have less than 5 characters!
-                </div>
-                Must be 5 characters
-                <div ng-show="handle.length > characters">
-                    You have more than 5 characters!
-                </div>
-            </div>
-            <hr>
-            <h1>twitter.com/{{ lowercasehandle() }}</h1>
-            <h3>Rules</h3>
-            <ul>
-                <li ng-repeat="rule in rules">
-                    {{ rule.rulename }}
-                </li>
-            </ul>
-            Add rule: <input type="text" ng-model='newRule'/> <a href="#" class="btn btn-default" ng-click="addRule()"> Add </a>
+        <div ng-view>
         </div>
     </div>
 </body>
