--- a/pages/main.html
+++ b/pages/main.html
@@ -1,3 +1,9 @@
-<h1>This is Main.</h1>
-<hr>
-<input type="text" ng-model="name"/>
+<label>Search</label>
+<input type="text" value="Doe"/>
+
+<h3>Search Results</h3>
+<div class="list-group">
+  <search-result></search-result>
+  <search-result></search-result>
+  <search-result></search-result>
+</div>
