--- a/directives/searchresult.html
+++ b/directives/searchresult.html
@@ -1,4 +1,4 @@
 <a href="#" class="list-group-item"> 
-	<h4 class="list-group-item-heading">Doe, John</h4> 
-	<p class="list-group-item-text">555 Camino Las Ramblas Thousand Oaks, CA 94408</p>
+	<h4 class="list-group-item-heading">{{ person.name }}</h4> 
+	<p class="list-group-item-text">{{ person.address }}</p>
 </a>
